Add BenchTAOAssocGet